--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Calque</title>
     <link rel="icon" type='image/png' href="favicon.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"  id="light-styles">
+	<link rel="stylesheet" href="style_dark.css"  id="dark-styles">
     <script src="math.min.js"></script>
     <script src="calque.js"></script>
     <script>
@@ -14,44 +15,51 @@
             window.calque = new Calque(input, output);
             input.focus();
         }
+		document.getElementById('dark-styles').disabled  = true; 
     </script>
 </head>
 <body>
     <div class="interface">
         <div class="output" id="output"></div>
-        <textarea class="input" id="input">## Calque
-
-# Expressions
-2 + 2 * 2
-sqrt(3^2 + 4^2)
-2 inch to cm
-cos(45 deg)
-
-# Variables
-a = 25
-b = a * 2
-postal code = 1122
-
-# Expression trees
-animals:
-  cats = 2
-  dogs = 3
-plants:
-  trees = 20
-  vegetables:
-    potatos = 10
-    carrots = 10
-
-# Functions
-pow2(x) = x ^ 2
-pow2(6)
-
-# Last result
-2 * 2
-last + 1
-
-# Calque on GitHub: https://github.com/grimalschi/calque
-# Using Math.js: https://github.com/josdejong/mathjs</textarea>
+        <textarea class="input" id="input"></textarea>
+    </div>
+	<div class="info">
+        <a href="https://github.com/MarvinParanoid/calque"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
+        <h1>Calque</h1>
+        <hr>
+		<h2>Settings</h2>
+		<p><input type="checkbox" checked="checked" id="checkDec" onclick="window.onload();" /> dec
+		<input type="checkbox" checked="checked" id="checkHex" onclick="window.onload();"/> hex
+		<input type="checkbox" checked="checked" id="checkBin" onclick="window.onload();"/> bin 
+		
+		<br><p>
+		<input type="radio" name="rb_group1" checked onclick="document.getElementById('dark-styles').disabled  = true;"/> Light side 
+		<input type="radio" name="rb_group1" onclick="document.getElementById('dark-styles').disabled  = false;"/> Dark side
+		
+        <h2>Expressions</h2>
+        <pre data-result=" = 5">sqrt(3^2 + 4^2)</pre>
+        <pre data-result=" = 2i">sqrt(-4)</pre>
+        <pre data-result=" = 5.08 cm">2 inch to cm</pre>
+        <pre data-result=" = 0.70711">cos(45 deg)</pre>
+        <h2>Variables</h2>
+        <pre data-result=" = 6">a = 2 + 2 * 2</pre>
+        <pre data-result=" = 5">b = a - 1</pre>
+        <pre data-result=" = 30">a * b</pre>
+        <h2>Functions</h2>
+        <pre data-result=" fn">pow(x,2) = x ^ 2</pre>
+        <pre data-result=" = 36">pow(6,2)</pre>
+        <hr>
+        <h2>Copy URL to share</h2>
+        <p><form action="http://tinyurl.com/create.php" method="post" target="_blank">
+        <input type="hidden" name="url" id="share" style="width:100%">
+        <input type="submit" name="submit" id="tinyurl" value="Shorten the URL">
+        <p id="warning" style="display:none">Calculation might be too long to share it via URL, try pastebin.</p>
+        </form>
+        <hr>
+        <p>Using <a target="blank" href="https://github.com/josdejong/mathjs">math.js</a>.</p>
+        <p>Original code: <a target="blank" href="https://github.com/grimalschi/calque">grimalschi/calque</a>.</p>
+        <hr>
+        <p>Привет, <a href="http://habrahabr.ru/post/264229/">Хабр</a>!</p>
     </div>
 </body>
 </html>
