--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <pre data-result=" = 5">b = a - 1</pre>
         <pre data-result=" = 30">a * b</pre>
         <h2>Functions</h2>
-        <pre data-result=" fn">pow(x,2) = x ^ 2</pre>
-        <pre data-result=" = 36">pow(6,2)</pre>
+        <pre data-result=" fn">pow2(x) = x ^ 2</pre>
+        <pre data-result=" = 36">pow2(6)</pre>
         
 		<h2>Numeral systems</h2>
 		<pre data-result=" = 17086 = 0x42BE">0x42AB + 19</pre>
@@ -58,7 +58,6 @@
         <p><form action="http://tinyurl.com/create.php" method="post" target="_blank">
         <input type="hidden" name="url" id="share" style="width:100%">
         <input type="submit" name="submit" id="tinyurl" value="Shorten the URL">
-        <p id="warning" style="display:none">Calculation might be too long to share it via URL, try pastebin.</p>
         </form>
         <hr>
         <p>Using <a target="blank" href="https://github.com/josdejong/mathjs">math.js</a>.</p>
